--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -2,20 +2,41 @@
   <a class="navbar-brand">SPORTS STORE</a>
 </div>
 <div class="row">
-  <div class="col-3 bg-info pa-1">
-    {{ categories.length }} Categories
+  <div class="col-3 pa-1">
+    <button class="btn btn-block btn-outline-primary m-3" (click)="changeCategory()">
+      Home
+    </button>
+    <button *ngFor="let cat of categories" class="btn btn-outline-primary m-3 btn-block" 
+      [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
+      {{cat}}
+    </button>
   </div>
   <div class="col-9 pa-1">
-    <div *ngFor="let product of products" class="card card-outline-primary">
+    <div *ngFor="let product of products" class="card border-info m-3">
       <h4 class="card-header">
-          {{product.name}}
-          <span class="float-right badge badge-primary">
-              {{ product.price | currency:"USD":symbol:"2.2-2" }}
-          </span>
+        {{product.name}}
+        <span class="float-right badge badge-primary">
+          {{ product.price | currency:"USD":symbol:"2.2-2" }}
+        </span>
       </h4>
       <div class="card-body">
         <div class="card-text pa-1">{{product.description}}</div>
       </div>
-  </div>
+    </div>
+    <div class="form-inline float-left m-3">
+      <select class="form-control" [value]="productsPerPage"
+        (change)="changePageSize($event.target.value)">
+        <option value="3">3 per Page</option>
+        <option value="4">4 per Page</option>
+        <option value="6">6 per Page</option>
+        <option value="8">8 per Page</option>
+      </select>
+    </div>
+    <div class="btn-group float-right m-3">
+      <button *counter="let page of pageCount" (click)="changePage(page)"
+        class="btn btn-outline-primary" [class.active]="page == selectedPage">
+          {{ page }}
+      </button>
+    </div>
   </div>
 </div>
