--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,5 +1,6 @@
-<div class="navbar navbar-expand-sm navbar-dark bg-primary">
+<div class="navbar navbar-expand-sm navbar-dark bg-primary justify-content-between">
   <a class="navbar-brand">SPORTS STORE</a>
+  <app-cart-summary></app-cart-summary>
 </div>
 <div class="row">
   <div class="col-3 pa-1">
@@ -20,7 +21,12 @@
         </span>
       </h4>
       <div class="card-body">
-        <div class="card-text pa-1">{{product.description}}</div>
+        <div class="card-text pa-1">
+          {{product.description}}
+          <button class="btn btn-success btn-sm float-right" (click)="addProductToCart(product)">
+            Add To Cart
+          </button>
+        </div>
       </div>
     </div>
     <div class="form-inline float-left m-3">
