--- a/src/app/store/cart-summary/cart-summary.component.html
+++ b/src/app/store/cart-summary/cart-summary.component.html
@@ -10,7 +10,7 @@
       </span>
   </small>
   
-  <button class="btn btn-primary btn-lg" [disabled]="cart.itemCount == 0">
+  <button class="btn btn-primary btn-lg" [disabled]="cart.itemCount == 0" routerLink="/cart">
       <i class="fa fa-shopping-bag"></i>
   </button>
   
