--- a/src/app/store/cart-detail/cart-detail.component.html
+++ b/src/app/store/cart-detail/cart-detail.component.html
@@ -1,3 +1,54 @@
-<div>
-  <h3 class="bg-info pa-1">Cart Detail Component</h3>
-</div>`
+<div class="navbar navbar-expand-sm navbar-dark bg-primary">
+  <a class="navbar-brand">SPORTS STORE</a>
+</div>
+<div class="m-1">
+  <h2 class="text-center">Your Cart</h2>
+  <table class="table table-bordered table-striped pa-1">
+    <thead>
+      <tr>
+        <th>Quantity</th>
+        <th>Product</th>
+        <th class="text-right">Price</th>
+        <th class="text-right">Subtotal</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngIf="cart.lines.length == 0">
+        <td colspan="4" class="text-center">
+          Your cart is empty
+        </td>
+      </tr>
+      <tr *ngFor="let line of cart.lines">
+        <td>
+          <input type="number" class="form-control-sm" style="width:5em" [value]="line.quantity" (change)="cart.updateQuantity(line.product,
+                                $event.target.value)" />
+        <td>{{line.product.name}}</td>
+        <td class="text-right">
+          {{line.product.price | currency:"USD":symbol:"2.2-2"}}
+        </td>
+        <td class="text-right">
+          {{(line.lineTotal) | currency:"USD":symbol:"2.2-2" }}
+        </td>
+        <td class="text-center">
+          <button class="btn btn-sm btn-danger" (click)="cart.removeLine(line.product.id)">
+            Remove
+          </button>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="3" class="text-right">Total:</td>
+        <td class="text-right">
+          {{cart.cartPrice | currency:"USD":symbol:"2.2-2"}}
+        </td>
+      </tr>
+    </tfoot>
+  </table>
+</div>
+<div class="text-center">
+  <button class="btn btn-primary m-2" routerLink="/store">Continue Shopping</button>
+  <button class="btn btn-secondary m-2" routerLink="/checkout" [disabled]="cart.lines.length == 0">
+    Checkout
+  </button>
+</div>
