--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,19 +1,23 @@
-<div class="navbar navbar-expand-sm navbar-dark bg-primary justify-content-between">
-  <a class="navbar-brand">SPORTS STORE</a>
-  <app-cart-summary></app-cart-summary>
+<div class="row mr-0">
+  <div class="col-12">
+    <div class="navbar navbar-expand-sm navbar-dark bg-primary justify-content-between">
+      <a class="navbar-brand">SPORTS STORE</a>
+      <app-cart-summary></app-cart-summary>
+    </div>
+  </div>
 </div>
-<div class="row">
-  <div class="col-3 pa-1">
-    <button class="btn btn-block btn-outline-primary m-3" (click)="changeCategory()">
+<div class="row mr-0 pt-2">
+  <div class="col-3">
+    <button class="btn btn-block btn-outline-primary" (click)="changeCategory()">
       Home
     </button>
-    <button *ngFor="let cat of categories" class="btn btn-outline-primary m-3 btn-block" 
+    <button *ngFor="let cat of categories" class="btn btn-outline-primary btn-block"
       [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
       {{cat}}
     </button>
   </div>
-  <div class="col-9 pa-1">
-    <div *ngFor="let product of products" class="card border-info m-3">
+  <div class="col-9 ">
+    <div *ngFor="let product of products" class="card border-info mb-2">
       <h4 class="card-header">
         {{product.name}}
         <span class="float-right badge badge-primary">
@@ -21,7 +25,7 @@
         </span>
       </h4>
       <div class="card-body">
-        <div class="card-text pa-1">
+        <div class="card-text">
           {{product.description}}
           <button class="btn btn-success btn-sm float-right" (click)="addProductToCart(product)">
             Add To Cart
@@ -29,19 +33,18 @@
         </div>
       </div>
     </div>
-    <div class="form-inline float-left m-3">
-      <select class="form-control" [value]="productsPerPage"
-        (change)="changePageSize($event.target.value)">
+    <div class="form-inline float-left">
+      <select class="form-control" [value]="productsPerPage" (change)="changePageSize($event.target.value)">
         <option value="3">3 per Page</option>
         <option value="4">4 per Page</option>
         <option value="6">6 per Page</option>
         <option value="8">8 per Page</option>
       </select>
     </div>
-    <div class="btn-group float-right m-3">
-      <button *counter="let page of pageCount" (click)="changePage(page)"
-        class="btn btn-outline-primary" [class.active]="page == selectedPage">
-          {{ page }}
+    <div class="btn-group float-right">
+      <button *counter="let page of pageCount" (click)="changePage(page)" class="btn btn-outline-primary"
+        [class.active]="page == selectedPage">
+        {{ page }}
       </button>
     </div>
   </div>
